chg'd width of form-container-tablet to prevent btn from overflow

--- a/pod-request-access-langing-page/styles/tablet.css
+++ b/pod-request-access-langing-page/styles/tablet.css
@@ -83,7 +83,7 @@ body{
 }
 
 .form-container-tablet{
-    width: 66%;
+    width: 79%;
 }
 
 .input-email-btn{
